tests/knowledge/context/drift/aws/live_env_test/another/account-data-for-drift/cloudrail-develop/eu-north-1/ec2-describe-network-acls.json
{
    "NetworkAcls": [
        {
            "Associations": [
                {
                    "NetworkAclAssociationId": "aclassoc-3b780552",
                    "NetworkAclId": "acl-25904c4c",
                    "SubnetId": "subnet-d3b163ba"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-38780551",
                    "NetworkAclId": "acl-25904c4c",
                    "SubnetId": "subnet-d7b9a59d"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-3a780553",
                    "NetworkAclId": "acl-25904c4c",
                    "SubnetId": "subnet-f0f00d8b"
                }
            ],
            "Entries": [
                {
                    "CidrBlock": "172.227.123.61/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "172.227.123.61/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                },
                {
                    "CidrBlock": "172.227.123.61/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "172.227.123.61/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                }
            ],
            "IsDefault": true,
            "NetworkAclId": "acl-25904c4c",
            "OwnerId": "167389268608",
            "Tags": [],
            "VpcId": "vpc-02f62b6b"
        }
    ]
}
