tests/knowledge/context/drift/aws/live_env_test/another/account-data-for-drift/cloudrail-develop/eu-north-1/ec2-describe-vpcs.json
{
    "Vpcs": [
        {
            "CidrBlock": "6.168.104.159/16",
            "CidrBlockAssociationSet": [
                {
                    "AssociationId": "vpc-cidr-assoc-4d8c5024",
                    "CidrBlock": "6.168.104.159/16",
                    "CidrBlockState": {
                        "State": "associated"
                    }
                }
            ],
            "DhcpOptionsId": "dopt-7255881b",
            "InstanceTenancy": "default",
            "IsDefault": true,
            "OwnerId": "167389268608",
            "State": "available",
            "VpcId": "vpc-02f62b6b"
        }
    ]
}
